--- a/template/{{ project_name }}/just/go.just.jinja
+++ b/template/{{ project_name }}/just/go.just.jinja
@@ -7,7 +7,11 @@ COMMIT := `git rev-parse --short HEAD 2>/dev/null || echo "unknown"`
 DATE := `date -u +%Y-%m-%dT%H:%M:%SZ`
 
 # ldflags for version injection
+{% if ci_platform == 'gitlab' -%}
 VERSION_PKG := "{{ gitlab_url }}/{{ project_name }}/src/{{ tool_name }}/version"
+{%- else -%}
+VERSION_PKG := "github.com/{{ github_registry | replace('ghcr.io/', '') }}/src/{{ tool_name }}/version"
+{%- endif %}
 LDFLAGS := "-s -w -X " + VERSION_PKG + ".Version=" + VERSION + " -X " + VERSION_PKG + ".Commit=" + COMMIT + " -X " + VERSION_PKG + ".BuildDate=" + DATE
 TOOL_FOLDER := env_var("PWD") + "/src/{{ tool_name }}"
 BIN_DIR := env_var("PWD") + "/bin"
