feat: add self-update command to template
- Add cmd/update.go.jinja with auto-update functionality
- Detects release source from git remote URL (GitHub or GitLab)
- Checks releases API for latest version
- Compares semantic versions
- Downloads and replaces binary atomically
- Supports both GitHub and GitLab releases API
- Fix version.go.jinja to use correct import path based on ci_platform

--- a/template/{{ project_name }}/src/{{ tool_name }}/cmd/version.go.jinja
+++ b/template/{{ project_name }}/src/{{ tool_name }}/cmd/version.go.jinja
@@ -4,7 +4,11 @@ import (
 	"fmt"
 
 	"github.com/spf13/cobra"
+{% if ci_platform == 'gitlab' -%}
 	"{{ gitlab_url }}/{{ project_name }}/src/{{ tool_name }}/version"
+{%- else -%}
+	"github.com/{{ github_registry | replace('ghcr.io/', '') }}/src/{{ tool_name }}/version"
+{%- endif %}
 )
 
 var versionCmd = &cobra.Command{
