fix: correct go.mod module path for GitHub projects and add CI debug
- Make go.mod module path conditional based on ci_platform
- Use github.com/<registry>/src/<tool> for GitHub projects
- Use <gitlab_url>/<project>/src/<tool> for GitLab projects
- Add debug step to CI workflow to diagnose docker directory issue

--- a/template/{{ project_name }}/src/{{ tool_name }}/go.mod.jinja
+++ b/template/{{ project_name }}/src/{{ tool_name }}/go.mod.jinja
@@ -1,4 +1,8 @@
+{% if ci_platform == 'gitlab' -%}
 module {{ gitlab_url }}/{{ project_name }}/src/{{ tool_name }}
+{%- else -%}
+module github.com/{{ github_registry | replace('ghcr.io/', '') }}/src/{{ tool_name }}
+{%- endif %}
 
 go 1.23
 
