fix: make main.go import path conditional for GitHub/GitLab

--- a/template/{{ project_name }}/src/{{ tool_name }}/main.go.jinja
+++ b/template/{{ project_name }}/src/{{ tool_name }}/main.go.jinja
@@ -1,6 +1,10 @@
 package main
 
+{% if ci_platform == 'gitlab' -%}
 import "{{ gitlab_url }}/{{ project_name }}/src/{{ tool_name }}/cmd"
+{%- else -%}
+import "github.com/{{ github_registry | replace('ghcr.io/', '') }}/src/{{ tool_name }}/cmd"
+{%- endif %}
 
 func main() {
 	cmd.Execute()
